<resources>
    <string name="app_name">Fitness</string>
    <string name="add">Add</string>
    <string name="base">Exercise Database</string>
    <string name="exName">Name of the exercise</string>
    <string name="description">Description</string>
    <string name="intLvl">RPE [%]</string>
    <string name="readyPlans">Ready training plans</string>
    <string name="userPlan">Your plan</string>
    <string name="title">MyFitnessApp</string>
    <string name="days">How many days in the week you want to work out?</string>
    <string name="one">One day</string>
    <string name="two">Two days</string>
    <string name="three">Three days</string>
    <string name="four">Four days</string>
    <string name="five">Five days</string>
    <string name="six">Six days</string>
    <string name="seven">Seven days</string>
    <string name="next">Next</string>
    <string name="label">MFA</string>
    <string name="hint">Pick category of the exercise below.</string>
    <string name="calendar">Calendar</string>
    <string name="pick">Pick</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string-array name="Trainings7">
        <item>Training 1</item>
        <item>Training 2</item>
        <item>Training 3</item>
        <item>Training 4</item>
        <item>Training 5</item>
        <item>Training 6</item>
        <item>Training 7</item>
    </string-array>
    <string-array name="Trainings6">
        <item>Training 1</item>
        <item>Training 1</item>
        <item>Training 1</item>
        <item>Training 1</item>
        <item>Training 1</item>
        <item>Training 1</item>
    </string-array>
    <string-array name="Trainings5">
        <item>Training 1</item>
        <item>Training 1</item>
        <item>Training 1</item>
        <item>Training 1</item>
        <item>Training 1</item>
    </string-array>
    <string-array name="Trainings4">
        <item>Training 1</item>
        <item>Training 1</item>
        <item>Training 1</item>
        <item>Training 1</item>
    </string-array>
    <string-array name="Trainings3">
        <item>Training 1</item>
        <item>Training 1</item>
        <item>Training 1</item>
    </string-array>
    <string-array name="Trainings2">
        <item>Training 1</item>
        <item>Training 1</item>
    </string-array>

    <string-array name="categories">
        <item>Chest</item>
        <item>Back</item>
        <item>Shoulders</item>
        <item>Legs</item>
        <item>Triceps</item>
        <item>Biceps</item>
        <item>ABS</item>
    </string-array>
    <string-array name="sections">
        <item>Chest</item>
        <item>Back</item>
        <item>Shoulders</item>
        <item>Legs</item>
        <item>Biceps</item>
        <item>Triceps</item>
        <item>ABS</item>
    </string-array>
    <string name="title_activity_example_acitvity">ExampleAcitvity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>