<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/howMany"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/days"
        android:textSize="28sp"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/howMany"
        android:layout_marginTop="85dp"
        android:gravity="center"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/oneDayRadioB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/one" />

        <RadioButton
            android:id="@+id/twoDayRadioB"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="6dp"
            android:text="@string/two" />

        <RadioButton
            android:id="@+id/threeDayRadioB"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="1dp"
            android:text="@string/three" />

        <RadioButton
            android:id="@+id/fourDayRadioB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/four" />

        <RadioButton
            android:id="@+id/fiveDayRadioB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:text="@string/five" />

        <RadioButton
            android:id="@+id/sixDayRadioB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/six" />

        <RadioButton
            android:id="@+id/sevenDayRadioB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seven" />
    </RadioGroup>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fbAddDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="18dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/next"
        android:textAlignment="center"
        android:textColor="#424242"
        tools:ignore="TextContrastCheck" />


</RelativeLayout>