<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".dodajCwiczeniaActivity"
    android:background="@color/black"
    >

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/exName"
        android:gravity="center"
        android:inputType="textPersonName"
        android:minHeight="50dp"
        android:background="@color/colorAccent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="190dp"
        android:gravity="center"
        android:autofillHints=""
        android:background="@color/colorAccent"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textPersonName"
        android:minHeight="50dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="510dp"
        android:entries="@array/categories"
        android:minHeight="50dp"
        android:backgroundTint="@color/black"
        />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="360dp"
        android:autofillHints=""
        android:background="@color/colorAccent"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/intLvl"
        android:inputType="number"
        android:minHeight="50dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="620dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/add" />

</RelativeLayout>