<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >


    <Button
        android:id="@+id/bazaCwiczenId"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="125dp"
        android:background="@drawable/custom_button2"
        android:onClick="launchBaza"
        android:text="@string/base"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="402dp" />

    <Button
        android:id="@+id/planId"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@+id/scenariuszeId"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="229dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/custom_button2"
        android:onClick="launchPlan"
        android:text="@string/userPlan"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/scenariuszeId"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@+id/bazaCwiczenId"
        android:layout_marginTop="126dp"
        android:background="@drawable/custom_button2"
        android:onClick="launchScenariusze"
        android:text="@string/readyPlans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-2dp"
        android:layout_marginEnd="328dp"
        app:srcCompat="@mipmap/ic_launcher_foreground" />


</RelativeLayout>